installer/kserve/kustomize/base/web-app.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: kserve-models-web-app
    kustomize.component: kserve-models-web-app
  name: kserve-models-web-app
  namespace: kserve
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 5000
  selector:
    app.kubernetes.io/component: kserve-models-web-app
    kustomize.component: kserve-models-web-app
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: kserve-models-web-app
    kustomize.component: kserve-models-web-app
  name: kserve-models-web-app
  namespace: kserve
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: kserve-models-web-app
      kustomize.component: kserve-models-web-app
  template:
    metadata:
      labels:
        app.kubernetes.io/component: kserve-models-web-app
        kustomize.component: kserve-models-web-app
    spec:
      containers:
        - envFrom:
            - configMapRef:
                name: kserve-models-web-app-config
          image: kserve/models-web-app:latest
          imagePullPolicy: Always
          name: kserve-models-web-app
          ports:
            - containerPort: 5000
      serviceAccountName: kserve-models-web-app
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  labels:
    app.kubernetes.io/component: kserve-models-web-app
    kustomize.component: kserve-models-web-app
  name: kserve-models-web-app
  namespace: kserve
spec:
  gateways:
    - $(ingressGateway)
  hosts:
    - "*"
  http:
    - match:
        - uri:
            prefix: /models/
      rewrite:
        uri: /
      route:
        - destination:
            host: kserve-models-web-app.kserve.svc.cluster.local
            port:
              number: 80
